# FuegoOnAppleSilicon

./: .gitignore  .gitmodules  .spi.yml  CMakeLists.txt  Package.swift  README.md  Tests.xctestplan  build-xcframework.sh  package-lock.json  package.json
FuegoOnAppleSilicon/: FuegoBridge.swift  Package.swift
FuegoOnAppleSilicon.xcworkspace/: contents.xcworkspacedata
FuegoOnAppleSilicon/CBridge/: FuegoBridge.cpp
FuegoOnAppleSilicon/CBridge/include/: FuegoBridge.hpp
FuegoOnAppleSilicon/FuegoOnAppleSilicon.xcodeproj/: project.pbxproj
FuegoOnAppleSilicon/Sources/SwiftBridge/: FuegoBridge.swift  Helpers.swift  Types.swift
FuegoOnAppleSilicon/SwiftBridge/: FuegoBridge.swift  Helpers.swift  Types.swift
FuegoOnAppleSilicon/Tests/: Helpers.swift
FuegoOnAppleSiliconIos/FuegoOnAppleSiliconIos/: ContentView.swift  FuegoOnAppleSiliconIosApp.swift
FuegoOnAppleSiliconIos/FuegoOnAppleSiliconIos.xcodeproj/: project.pbxproj
FuegoOnAppleSiliconMultiPlatform/FuegoOnAppleSiliconMultiPlatform/: ContentView.swift  FuegoOnAppleSiliconMultiPlatformApp.swift
FuegoOnAppleSiliconMultiPlatform/FuegoOnAppleSiliconMultiPlatform.xcodeproj/: project.pbxproj
fuegomain/: CMakeLists.txt  FuegoMain.cpp  FuegoMainEngine.h  FuegoMainUtil.cpp  FuegoMainUtil.h
fuegotest/: CMakeLists.txt  FuegoTestMain.cpp
go/: CMakeLists.txt  GoAutoBook.h  GoBoard.h  GoBoardSynchronizer.h  GoGtpEngine.cpp  GoGtpEngine.h  GoInit.cpp  GoPlayerMove.h
go/test/: GoBoardSynchronizerTest.cpp  GoBoardTest.cpp  GoBoardUpdaterTest.cpp  GoBoardUtilTest.cpp  GoBookTest.cpp  GoEyeUtilTest.cpp  GoGameTest.cpp  GoGtpCommandUtilTest.cpp  GoGtpEngineTest.cpp  GoKomiTest.cpp  GoLadderTest.cpp  GoRegionBoardTest.cpp  GoRegionTest.cpp  GoSetupUtilTest.cpp  GoTimeControlTest.cpp  GoTimeSettingsTest.cpp  GoUtilTest.cpp
gouct/: CMakeLists.txt  FuegoEngine.cpp  FuegoEngine.hpp  GoUctAdditiveKnowledgeFuego.cpp  GoUctAdditiveKnowledgeMultiple.cpp  GoUctBoard.h  GoUctBookBuilder.h  GoUctBookBuilderCommands.h  GoUctCommands.cpp  GoUctDefaultPriorKnowledge.cpp  GoUctGlobalSearch.h  GoUctPatternData.h  GoUctPatterns.h  GoUctPlayer.h
gouct/test/: GoUctAdditiveKnowledgeMultipleTest.cpp  GoUctBoardTest.cpp  GoUctKnowledgeTest.cpp  GoUctLadderKnowledgeTest.cpp  GoUctUtilTest.cpp
gtpengine/: CMakeLists.txt  GtpEngine.cpp  GtpEngine.h
gtpengine/test/: GtpEngineTest.cpp
node/: release.js  zipFramework.js
simpleplayers/: CMakeLists.txt
smartgame/: CMakeLists.txt  SgBWArray.h  SgBlackWhite.h  SgBoardColor.h  SgBoardConst.cpp  SgBoardConst.h  SgBookBuilder.cpp  SgDebug.cpp  SgDfpnSearch.h  SgFastLog.cpp  SgGtpCommands.cpp  SgGtpCommands.h  SgMove.h  SgMpiSynchronizer.h  SgPlatform.cpp  SgPlatform.h  SgPoint.h  SgProp.cpp  SgProp.h  SgRandom.cpp  SgStatisticsVlt.h  SgStringUtil.cpp  SgStringUtil.h  SgSystem.cpp  SgSystem.h  SgThreadedWorker.h  SgTime.cpp  SgUctSearch.cpp  SgUctSearch.h  SgUctTree.cpp  SgUctTree.h  SgUctValue.h
smartgame/test/: SgArrayListTest.cpp  SgArrayTest.cpp  SgBWArrayTest.cpp  SgBWSetTest.cpp  SgBlackWhiteTest.cpp  SgBoardColorTest.cpp  SgBoardConstTest.cpp  SgCmdLineOptTest.cpp  SgConnCompIteratorTest.cpp  SgEBWArrayTest.cpp  SgEvaluatedMovesTest.cpp  SgFastLogTest.cpp  SgGameReaderTest.cpp  SgGtpUtilTest.cpp  SgHashTest.cpp  SgMarkerTest.cpp  SgMathTest.cpp  SgMiaiMapTest.cpp  SgMiaiStrategyTest.cpp  SgNbIteratorTest.cpp  SgNodeTest.cpp  SgNodeUtilTest.cpp  SgPointArrayTest.cpp  SgPointSetTest.cpp  SgPointTest.cpp  SgPropTest.cpp  SgRandomTest.cpp  SgRectTest.cpp  SgRestorerTest.cpp  SgSearchTest.cpp  SgSortedArrayTest.cpp  SgSortedMovesTest.cpp  SgStackTest.cpp  SgStatisticsTest.cpp  SgStringUtilTest.cpp  SgSystemTest.cpp  SgTimeControlTest.cpp  SgUctSearchTest.cpp  SgUctTreeTest.cpp  SgUctTreeUtilTest.cpp  (+5 more)
unittestmain/: CMakeLists.txt  UnitTestMain.cpp  all_tests_registrar.cpp.in
xcode/FuegoIteropSample/FuegoIteropSample/: ContentView.swift  FuegoBridge.swift  FuegoIteropSampleApp.swift
xcode/FuegoIteropSample/FuegoIteropSample.xcodeproj/: project.pbxproj
xcode/FuegoIteropSample/FuegoIteropSample.xcodeproj/project.xcworkspace/xcuserdata/alexander.xcuserdatad/: UserInterfaceState.xcuserstate
xcode/FuegoIteropSample/FuegoIteropSample.xcodeproj/xcuserdata/alexander.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
xcode/FuegoIteropSample/FuegoIteropSample.xcodeproj/xcuserdata/alexander.xcuserdatad/xcschemes/: xcschememanagement.plist
xcode/FuegoIteropSample2/FuegoIteropSample2/: ContentView.swift  FuegoIteropSample2App.swift
xcode/FuegoIteropSample2/FuegoIteropSample2.xcodeproj/: project.pbxproj
xcode/FuegoIteropSample2/FuegoIteropSample2.xcodeproj/project.xcworkspace/xcuserdata/alexander.xcuserdatad/: UserInterfaceState.xcuserstate
xcode/FuegoIteropSample2/FuegoIteropSample2.xcodeproj/xcshareddata/xcschemes/: FuegoIteropSample2.xcscheme
xcode/FuegoIteropSample2/FuegoIteropSample2.xcodeproj/xcuserdata/alexander.xcuserdatad/xcschemes/: xcschememanagement.plist
xcode/FuegoLibrary/: Package.swift
xcode/FuegoLibrary/Sources/Bridge/include/: FuegoBridge.hpp
xcode/FuegoLibrary/Sources/FuegoLibrary/: FuegoBridge.swift
xcode/FuegoLibrary/Tests/FuegoLibraryTests/: FuegoLibraryTests.swift
xcode/FuegoOnAppleSilicon.xcworkspace/: contents.xcworkspacedata
xcode/FuegoTest/FuegoTest/: ContentView.swift  FuegoTest-Bridging-Header.h  FuegoTestApp.swift
xcode/FuegoTest/FuegoTest.xcodeproj/: project.pbxproj
xcode/FuegoTest/FuegoTest.xcodeproj/project.xcworkspace/xcuserdata/alexander.xcuserdatad/: UserInterfaceState.xcuserstate
xcode/FuegoTestApp/: ContentView.swift  FuegoTestApp.swift  FuegoTestAppApp.swift
xcode/FuegoTestApp.xcodeproj/: project.pbxproj
xcode/FuegoTestApp.xcodeproj/xcshareddata/xcschemes/: FuegoTestApp.xcscheme
xcode/FuegoTestApp/FuegoCBridge/: Package.swift
xcode/FuegoTestApp/FuegoCBridge/Tests/FuegoCBridgeTests/: FuegoCBridgeTests.swift
xcode/FuegoUnitTests/: ContentView.swift  FuegoUnitTests-Bridging-Header.h  FuegoUnitTestsApp.swift
xcode/FuegoUnitTests.xcodeproj/: project.pbxproj
xcode/package/: Package.swift
(+1 files in other folders)
